get data by direct connect mongodb without login
